src/components/GraphEditor/comp.scss
@import "src/globals";

.rete-editor {
  height: 100%;

  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  height: 100%;
  .dock {
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap;
  }

  .dock-item {
    display: inline-block;
    vertical-align: top;
    font-size: 0.8em;
    .node {
      margin: 0.3em 1em;
    }
    .settings,
    .download {
      display: none;
    }

    .filtered {
      display: none;
    }
  }

  .rete-container {
    flex: 1 1 auto;
    overflow: hidden;
    .node-editor {
      width: 100%;
      height: 100%;
      .connection {
        path {
          stroke: $palette-5-hex;
        }
      }
    }
  }
  .dock,
  .node-editor {
    .node {
      border-color: transparent;
      &.selected {
        opacity: 0.9;
      }
    }
  }

  position: relative;
  .save-load {
    text-align: left;
    position: absolute;
    top: 5px;
    right: 5px;
    width: 50%;
    max-width: 350px;
  }

  .filter-bar {
    text-align: left;
    position: relative;
    input {
      position: absolute;
      right: 0;
      top: 0;
      left: auto;
      max-width: 20em;
    }

    .btn:hover {
      background-color: initial;
      color: var(--primary);
    }
  }
}

